RESOLVED FIXED292190
[JSC] Functions named yield in strict mode is invalid
https://bugs.webkit.org/show_bug.cgi?id=292190
Summary [JSC] Functions named yield in strict mode is invalid
Sosuke Suzuki
Reported 2025-04-28 08:11:09 PDT
According to the spce[1], SyntaxError should be thrown for functions named yield in strict mode. However current JSC don't throw SyntaxError for functions with `use strict` directive in their body. This patch changes to fix it. [1]: https://tc39.es/ecma262/#sec-identifiers-static-semantics-early-errors
Attachments
Sosuke Suzuki
Comment 1 2025-04-28 08:12:13 PDT
Radar WebKit Bug Importer
Comment 2 2025-05-05 08:12:16 PDT
EWS
Comment 3 2025-05-24 22:30:25 PDT
Committed 295402@main (49e7f6c0c1d5): <https://commits.webkit.org/295402@main> Reviewed commits have been landed. Closing PR #44609 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.