[JSC] Functions named yield in strict mode is invalid https://bugs.webkit.org/show_bug.cgi?id=292190

Reviewed by Yusuke Suzuki.

According to the spce[1], SyntaxError should be thrown for functions
named yield in strict mode.

However we don't throw SyntaxError for functions with `use strict`
directive in their body.

This patch changes to fix it.

[1]: https://tc39.es/ecma262/#sec-identifiers-static-semantics-early-errors

* JSTests/stress/yield-function-name-syntax-error-strict.js: Added.
(shouldThrowSyntaxError):
* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFunctionInfo):

Canonical link: https://commits.webkit.org/295402@main